--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <h1>Vue2.0实例</h1>
     <hr>
     <ol>
-        <li><a href="example/helloworld.html">Hello World! 实例</a></li>
+         <li><a href="example/helloworld.html">Hello World! 实例</a></li>
+         <li><a href="example/v-if.html">v-if&v-else&v-show实例</a></li>
+         <li><a href="example/v-for.html">v-for实例</a></li>
+         <li><a href="example/v-text.html">v-text&v-html实例</a></li>
     </ol>
 </body>
 </html>
