--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
          <li><a href="example/v-if.html">v-if&v-else&v-show实例</a></li>
          <li><a href="example/v-for.html">v-for实例</a></li>
          <li><a href="example/v-text.html">v-text&v-html实例</a></li>
+         <li><a href="example/v-on.html">v-on实例</a></li>
+         <li><a href="example/v-model.html">v-model实例</a></li>
+         <li><a href="example/v-bind.html">v-bind实例</a></li>
+         <li><a href="example/others.html">v-pre&v-cloak&v-once实例</a></li>
     </ol>
 </body>
 </html>
