--- a/index.html
+++ b/index.html
@@ -19,5 +19,13 @@
          <li><a href="example/v-bind.html">v-bind实例</a></li>
          <li><a href="example/others.html">v-pre&v-cloak&v-once实例</a></li>
     </ol>
+    <hr>
+    <ol>
+        <li><a href="example/vue.directive.html">Vue.directive实例-自定义指令</a></li>
+        <li><a href="example/vue.extend.html">Vue.extend实例-扩展实例构造器</a></li>
+        <li><a href="example/vue.set.html">Vue.extend实例-全局操作</a></li>
+        <li><a href="example/vuehook.html">Vue生命周期</a></li>
+        <li><a href="example/template.html">Vue Template模板</a></li>
+    </ol>
 </body>
 </html>
