--- a/example/vue.directive.html
+++ b/example/vue.directive.html
@@ -27,7 +27,7 @@
 			el.style.color=binding.value;
 			//el.style='color:'+binding.value;
 		});
-        //完整写法，bingding传入完整对象。
+        //完整写法，binding传入完整对象。
         Vue.directive('jspang',{
             bind: function (el, binding, vnode) {//被绑定
                 console.log('1 - bind');
