--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         <li><a href="example/vue.set.html">Vue.extend实例-全局操作</a></li>
         <li><a href="example/vuehook.html">Vue生命周期</a></li>
         <li><a href="example/template.html">Vue Template模板</a></li>
+        <li><a href="example/component.html">Vue 组件</a></li>
+        <li><a href="example/component2.html">Vue 组件2--props属性</a></li>
+        <li><a href="example/component3.html">Vue 组件3--父子组件关系</a></li>
+        <li><a href="example/component4.html">Vue 组件3--Component 标签</a></li>
     </ol>
 </body>
 </html>
